# service_backend

./: .gitignore  pyproject.toml  requirements.txt
vacancy_resume_backend/: config.py  main.py  parser.py  response.py
